--- a/PosApp/app/src/main/res/layout/fragment_cart.xml
+++ b/PosApp/app/src/main/res/layout/fragment_cart.xml
@@ -8,42 +8,50 @@
     android:background="@drawable/background_order"
     tools:context=".FragmentCart">
 
-
-    <Button
-        android:id="@+id/btnCancel"
-        android:layout_width="203dp"
-        android:layout_height="68dp"
-        android:layout_marginEnd="80dp"
-        android:text="戻る"
-        android:textSize="25dp"
-        app:layout_constraintBottom_toBottomOf="@+id/btnDelete"
-        app:layout_constraintEnd_toStartOf="@+id/btnDelete"
-        app:layout_constraintTop_toTopOf="@+id/btnDelete"
-        app:layout_constraintVertical_bias="0.0" />
-
-    <Button
-        android:id="@+id/btnDelete"
-        android:layout_width="203dp"
-        android:layout_height="68dp"
-        android:text="注文削除"
-        android:textSize="25dp"
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="center"
+        android:orientation="horizontal"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.958" />
+        app:layout_constraintStart_toStartOf="parent">
 
-    <Button
-        android:id="@+id/btnPay"
-        android:layout_width="203dp"
-        android:layout_height="68dp"
-        android:layout_marginStart="88dp"
-        android:text="支払いへ"
-        android:textSize="25dp"
-        app:layout_constraintBottom_toBottomOf="@+id/btnDelete"
-        app:layout_constraintStart_toEndOf="@+id/btnDelete"
-        app:layout_constraintTop_toTopOf="@+id/btnDelete"
-        app:layout_constraintVertical_bias="0.0" />
+        <Button
+            android:id="@+id/btnCancel"
+            android:layout_width="203dp"
+            android:layout_height="68dp"
+            android:background="@color/black"
+            android:text="戻る"
+            android:textColor="@color/white"
+            android:textSize="25dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.958" />
+
+        <Button
+            android:id="@+id/btnDelete"
+            android:layout_width="203dp"
+            android:layout_height="68dp"
+            android:layout_marginStart="36dp"
+            android:layout_marginEnd="36dp"
+            android:background="@color/black"
+            android:text="注文削除"
+            android:textColor="@color/white"
+            android:textSize="25dp" />
+
+        <Button
+            android:id="@+id/btnPay"
+            android:layout_width="203dp"
+            android:layout_height="68dp"
+            android:background="@color/black"
+            android:text="支払いへ"
+            android:textColor="@color/white"
+            android:textSize="25dp" />
+
+    </LinearLayout>
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/productListRecyclerview"
@@ -65,7 +73,6 @@
         android:textSize="30dp"
         android:textColor="@color/black"
         android:gravity="center"
-        app:layout_constraintBottom_toTopOf="@+id/btnPay"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/productListRecyclerview"
         app:layout_constraintVertical_bias="0.0" />
