--- a/PosApp/app/src/main/res/layout/fragment_menu.xml
+++ b/PosApp/app/src/main/res/layout/fragment_menu.xml
@@ -5,7 +5,23 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/background_fragment"
     tools:context=".FragmentMenu">
+
+    <TextView
+        android:id="@+id/textView28"
+        android:layout_width="450dp"
+        android:layout_height="90dp"
+        android:layout_marginTop="5dp"
+        android:gravity="center"
+        android:text="メニュー"
+        android:textColor="@color/black"
+        android:textSize="80dp"
+        android:textStyle="bold|italic"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.501"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <Button
         android:id="@+id/btnAddMenu"
@@ -33,12 +49,12 @@
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/MenuRecyclerview"
-        android:layout_width="1101dp"
+        android:layout_width="match_parent"
         android:layout_height="584dp"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="88dp"
         app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.502"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
