--- a/PosApp/app/src/main/res/layout/fragment_orders.xml
+++ b/PosApp/app/src/main/res/layout/fragment_orders.xml
@@ -90,14 +90,13 @@
         android:id="@+id/textView18"
         android:layout_width="450dp"
         android:layout_height="97dp"
-        android:layout_marginTop="5dp"
+        android:layout_marginTop="4dp"
         android:gravity="center"
         android:text="メニュー"
         android:textColor="@color/black"
         android:textSize="80dp"
         android:textStyle="bold|italic"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.501"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -148,6 +147,18 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView18"
         app:layout_constraintVertical_bias="0.0" />
+
+    <Button
+        android:id="@+id/btnAdd"
+        android:layout_width="113dp"
+        android:layout_height="75dp"
+        android:layout_marginBottom="44dp"
+        android:text="追加"
+        android:textSize="30dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.865"
+        app:layout_constraintStart_toEndOf="@+id/btnDrink" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
