--- a/PosApp/app/src/main/res/layout/fragment_pay.xml
+++ b/PosApp/app/src/main/res/layout/fragment_pay.xml
@@ -9,6 +9,7 @@
     android:background="@drawable/background_order"
     tools:context=".FragmentPay">
 
+
     <LinearLayout
         android:id="@+id/paymentHeaderLayout"
         android:layout_width="match_parent"
@@ -98,48 +99,50 @@
 
     </LinearLayout>
 
-
-    <Button
-        android:id="@+id/btnPay"
-        android:layout_width="203dp"
-        android:layout_height="68dp"
-        android:layout_margin="16dp"
-        android:layout_marginStart="88dp"
-        android:layout_marginBottom="6dp"
-        android:background="@color/black"
-        android:text="支払確定"
-        android:textColor="@color/white"
-        android:textSize="25dp"
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="center"
+        android:orientation="horizontal"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/btnStatus"
-        app:layout_constraintHorizontal_bias="0.595"
-        app:layout_constraintStart_toEndOf="@+id/btnCancel"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.985" />
-
-    <Button
-        android:id="@+id/btnCancel"
-        android:layout_width="203dp"
-        android:layout_height="77dp"
-        android:layout_marginStart="236dp"
-        android:text="戻る"
-        android:textSize="30dp"
-        app:layout_constraintBottom_toBottomOf="@+id/btnPay"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/btnPay"
-        app:layout_constraintVertical_bias="0.444" />
-
-    <Button
-        android:id="@+id/btnStatus"
-        android:layout_width="203dp"
-        android:layout_height="77dp"
-        android:layout_marginEnd="252dp"
-        android:text="注文状況"
-        android:textSize="25dp"
-        app:layout_constraintBottom_toBottomOf="@+id/btnPay"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/btnPay"
-        app:layout_constraintVertical_bias="0.444" />
+        app:layout_constraintStart_toStartOf="parent">
+
+        <Button
+            android:id="@+id/btnCancel"
+            android:layout_width="203dp"
+            android:layout_height="68dp"
+            android:background="@color/black"
+            android:text="戻る"
+            android:textColor="@color/white"
+            android:textSize="25dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.958" />
+
+        <Button
+            android:id="@+id/btnPay"
+            android:layout_width="203dp"
+            android:layout_height="68dp"
+            android:layout_marginStart="36dp"
+            android:layout_marginEnd="36dp"
+            android:background="@color/black"
+            android:text="支払確定"
+            android:textColor="@color/white"
+            android:textSize="25dp" />
+
+        <Button
+            android:id="@+id/btnStatus"
+            android:layout_width="203dp"
+            android:layout_height="68dp"
+            android:background="@color/black"
+            android:text="注文状況"
+            android:textColor="@color/white"
+            android:textSize="25dp" />
+
+    </LinearLayout>
 
     <TextView
         android:id="@+id/tvDepositAmount"
@@ -164,6 +167,7 @@
         android:hint="預金額を入力"
         android:textColor="@color/black"
         android:textSize="50dp"
+        android:maxLength="7"
         android:inputType="number"
         app:layout_constraintEnd_toEndOf="@+id/tvDepositAmount"
         app:layout_constraintHorizontal_bias="0.0"
@@ -197,9 +201,9 @@
         android:layout_height="301dp"
         android:layout_marginEnd="432dp"
         android:src="@drawable/paypay"
-        app:layout_constraintBottom_toTopOf="@+id/btnPay"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/paymentDetailsLayout"
-        app:layout_constraintVertical_bias="0.75" />
+        app:layout_constraintVertical_bias="0.169" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
