--- a/PosApp/app/src/main/res/layout/recycleview_menu.xml
+++ b/PosApp/app/src/main/res/layout/recycleview_menu.xml
@@ -3,18 +3,23 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:tag="position"
+    android:orientation="horizontal"
+    android:background="#C3EADB"
     android:layout_width="match_parent"
-    android:layout_height="250dp">
+    android:layout_height="220dp">
 
     <ImageView
         android:id="@+id/imgImageMenu"
         android:layout_width="295dp"
         android:layout_height="157dp"
-        android:layout_marginTop="28dp"
+        android:layout_marginTop="12dp"
+        android:background="@drawable/rim_bg"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.825"
+        app:layout_constraintHorizontal_bias="0.914"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/main_food">
 
     </ImageView>
 
@@ -22,48 +27,52 @@
         android:id="@+id/tvKinds"
         android:layout_width="185dp"
         android:layout_height="69dp"
-        android:layout_marginStart="28dp"
+        android:layout_marginStart="192dp"
         android:gravity="center"
         android:text="カテゴリ"
+        android:textColor="@color/black"
         android:textSize="35dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.088" />
+        app:layout_constraintVertical_bias="0.105" />
 
-    <TextView
+    <EditText
         android:id="@+id/tvNameMenu"
         android:layout_width="684dp"
         android:layout_height="63dp"
-        android:layout_marginTop="32dp"
-        android:gravity="center"
+        android:layout_marginTop="44dp"
+        android:gravity="left"
         android:text="品名"
+        android:textColor="@color/black"
         android:textSize="35dp"
         app:layout_constraintEnd_toEndOf="@+id/tvKinds"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="@+id/tvKinds"
         app:layout_constraintTop_toBottomOf="@+id/tvKinds" />
 
-    <TextView
+    <EditText
         android:id="@+id/tvPriceMenu"
         android:layout_width="185dp"
         android:layout_height="69dp"
-        android:layout_marginStart="68dp"
-        android:gravity="center"
+        android:layout_marginStart="128dp"
+        android:gravity="left"
         android:text="価格"
+        android:textColor="@color/black"
         android:textSize="35dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toEndOf="@+id/tvKinds"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.088" />
+        app:layout_constraintVertical_bias="0.105" />
 
-    <TextView
+    <EditText
         android:id="@+id/tvQuantity"
-        android:layout_width="185dp"
+        android:layout_width="120dp"
         android:layout_height="69dp"
-        android:layout_marginStart="68dp"
-        android:gravity="center"
+        android:layout_marginStart="96dp"
+        android:gravity="left"
         android:text="数量"
+        android:textColor="@color/black"
         android:textSize="35dp"
         app:layout_constraintBottom_toBottomOf="@+id/tvPriceMenu"
         app:layout_constraintStart_toEndOf="@+id/tvPriceMenu"
@@ -74,12 +83,83 @@
         android:id="@+id/btnDelete"
         android:layout_width="74dp"
         android:layout_height="55dp"
-        android:layout_marginStart="72dp"
+        android:layout_marginStart="8dp"
         app:layout_constraintBottom_toBottomOf="@+id/imgImageMenu"
         app:layout_constraintStart_toEndOf="@+id/imgImageMenu"
         app:layout_constraintTop_toTopOf="@+id/imgImageMenu"
-        app:layout_constraintVertical_bias="0.019"
+        app:layout_constraintVertical_bias="0.0"
         app:srcCompat="@android:drawable/ic_menu_delete" />
+
+    <TextView
+        android:id="@+id/textView21"
+        android:layout_width="match_parent"
+        android:layout_height="10dp"
+        android:text=""
+        android:background="@color/white"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.488"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintVertical_bias="1.0" />
+
+    <TextView
+        android:id="@+id/textView30"
+        android:layout_width="125dp"
+        android:layout_height="69dp"
+        android:textColor="@color/black"
+        android:textSize="35dp"
+        android:gravity="center"
+        android:text="食種:"
+        app:layout_constraintBottom_toBottomOf="@+id/tvKinds"
+        app:layout_constraintEnd_toStartOf="@+id/tvKinds"
+        app:layout_constraintTop_toTopOf="@+id/tvKinds" />
+
+    <TextView
+        android:id="@+id/textView31"
+        android:layout_width="100dp"
+        android:layout_height="63dp"
+        android:gravity="center"
+        android:text="品名:"
+        android:textColor="@color/black"
+        android:textSize="35dp"
+        app:layout_constraintBottom_toBottomOf="@+id/tvNameMenu"
+        app:layout_constraintEnd_toStartOf="@+id/tvNameMenu"
+        app:layout_constraintTop_toTopOf="@+id/tvNameMenu" />
+
+    <TextView
+        android:id="@+id/textView32"
+        android:layout_width="125dp"
+        android:layout_height="69dp"
+        android:gravity="center"
+        android:text="価格:"
+        android:textColor="@color/black"
+        android:textSize="35dp"
+        app:layout_constraintBottom_toBottomOf="@+id/tvPriceMenu"
+        app:layout_constraintEnd_toStartOf="@+id/tvPriceMenu"
+        app:layout_constraintTop_toTopOf="@+id/tvPriceMenu" />
+
+    <TextView
+        android:id="@+id/textView33"
+        android:layout_width="100dp"
+        android:layout_height="69dp"
+        android:gravity="center"
+        android:text="在庫:"
+        android:textColor="@color/black"
+        android:textSize="35dp"
+        app:layout_constraintBottom_toBottomOf="@+id/tvQuantity"
+        app:layout_constraintEnd_toStartOf="@+id/tvQuantity"
+        app:layout_constraintTop_toTopOf="@+id/tvQuantity" />
+
+    <ImageButton
+        android:id="@+id/btnUpdateMenu"
+        android:layout_width="74dp"
+        android:layout_height="55dp"
+        android:layout_marginStart="8dp"
+        app:layout_constraintBottom_toBottomOf="@+id/imgImageMenu"
+        app:layout_constraintStart_toEndOf="@+id/imgImageMenu"
+        app:layout_constraintTop_toTopOf="@+id/imgImageMenu"
+        app:layout_constraintVertical_bias="0.813"
+        app:srcCompat="@android:drawable/ic_popup_sync" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
