--- a/PosApp/app/src/main/res/layout/recycleview_shifts_home.xml
+++ b/PosApp/app/src/main/res/layout/recycleview_shifts_home.xml
@@ -5,85 +5,86 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:background="#C3EADB"
-    android:layout_height="180dp">
+    android:layout_height="146dp">
 
     <TextView
         android:id="@+id/tvName"
-        android:layout_width="1062dp"
-        android:layout_height="57dp"
-        android:layout_marginStart="216dp"
+        android:layout_width="580dp"
+        android:layout_height="45dp"
         android:text="Name"
         android:textColor="@color/black"
-        android:textSize="40dp"
-        app:layout_constraintStart_toStartOf="parent"
+        android:textSize="30dp"
+        app:layout_constraintStart_toEndOf="@+id/textView24"
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/textView24"
-        android:layout_width="230dp"
-        android:layout_height="57dp"
+        android:layout_width="216dp"
+        android:layout_height="45dp"
         android:gravity="center"
         android:text="名前："
         android:textColor="@color/black"
-        android:textSize="40dp"
+        android:textSize="30dp"
         app:layout_constraintBottom_toBottomOf="@+id/tvName"
-        app:layout_constraintEnd_toStartOf="@+id/tvName"
-        app:layout_constraintTop_toTopOf="@+id/tvName" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/tvName"
+        app:layout_constraintVertical_bias="0.0" />
 
     <TextView
         android:id="@+id/tvTime"
-        android:layout_width="1062dp"
-        android:layout_height="57dp"
-        android:layout_marginStart="216dp"
+        android:layout_width="580dp"
+        android:layout_height="45dp"
         android:text="Time"
         android:textColor="@color/black"
-        android:textSize="40dp"
-        app:layout_constraintStart_toStartOf="parent"
+        android:textSize="30dp"
+        app:layout_constraintStart_toEndOf="@+id/textView26"
         app:layout_constraintTop_toBottomOf="@+id/tvName" />
 
     <TextView
         android:id="@+id/textView26"
-        android:layout_width="230dp"
-        android:layout_height="57dp"
-        android:text="時間帯:"
-        android:textColor="@color/black"
+        android:layout_width="216dp"
+        android:layout_height="45dp"
         android:gravity="center"
-        android:textSize="40dp"
+        android:text="日付:"
+        android:textColor="@color/black"
+        android:textSize="30dp"
         app:layout_constraintBottom_toBottomOf="@+id/tvTime"
-        app:layout_constraintEnd_toStartOf="@+id/tvTime"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tvName" />
 
     <TextView
         android:id="@+id/tvDate"
-        android:layout_width="1062dp"
-        android:layout_height="57dp"
-        android:layout_marginStart="216dp"
+        android:layout_width="580dp"
+        android:layout_height="45dp"
         android:text="Date"
         android:textColor="@color/black"
-        android:textSize="40dp"
+        android:textSize="30dp"
+        app:layout_constraintStart_toEndOf="@+id/textView29"
+        app:layout_constraintTop_toBottomOf="@+id/tvTime" />
+
+    <TextView
+        android:id="@+id/textView29"
+        android:layout_width="216dp"
+        android:layout_height="45dp"
+        android:gravity="center"
+        android:text="時間帯:"
+        android:textColor="@color/black"
+        android:textSize="30dp"
+        app:layout_constraintBottom_toBottomOf="@+id/tvDate"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tvTime" />
 
     <TextView
-        android:layout_width="230dp"
-        android:layout_height="57dp"
-        android:gravity="center"
-        android:text="日付:"
-        android:textColor="@color/black"
-        android:textSize="40dp"
-        app:layout_constraintBottom_toBottomOf="@+id/tvDate"
-        app:layout_constraintEnd_toStartOf="@+id/tvDate"
-        app:layout_constraintTop_toBottomOf="@+id/tvTime" />
-
-    <ImageButton
-        android:id="@+id/deleteUserID"
-        android:layout_width="68dp"
-        android:layout_height="62dp"
-        android:layout_marginEnd="52dp"
-        android:onClick="onDeleteButtonClicked"
+        android:id="@+id/textView21"
+        android:layout_width="match_parent"
+        android:layout_height="5dp"
+        android:text=""
+        android:background="@color/white"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@android:drawable/ic_menu_delete" />
+        app:layout_constraintHorizontal_bias="0.488"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintVertical_bias="1.0" />
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
