--- a/PosApp/app/src/main/res/layout/recycleview_users.xml
+++ b/PosApp/app/src/main/res/layout/recycleview_users.xml
@@ -1,9 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="190dp"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    android:layout_height="180dp"
+    android:background="#C3EADB">
 
     <TextView
         android:id="@+id/tvName"
@@ -12,6 +14,7 @@
         android:layout_marginStart="220dp"
         android:text="Name"
         android:textSize="40dp"
+        android:textColor="@color/black"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -22,20 +25,11 @@
         android:layout_marginTop="0dp"
         android:text="Code"
         android:textSize="40dp"
+        android:textColor="@color/black"
         app:layout_constraintEnd_toEndOf="@+id/tvName"
         app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="@+id/tvName"
         app:layout_constraintTop_toBottomOf="@+id/tvName" />
-
-    <ImageView
-        android:id="@+id/deleteUserID"
-        android:layout_width="64dp"
-        android:layout_height="79dp"
-        android:layout_marginTop="52dp"
-        android:layout_marginEnd="28dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/tvName"
-        app:srcCompat="@drawable/delete" />
 
     <TextView
         android:id="@+id/tvPass"
@@ -43,9 +37,69 @@
         android:layout_height="57dp"
         android:text="Pass"
         android:textSize="40dp"
+        android:textColor="@color/black"
         app:layout_constraintEnd_toEndOf="@+id/tvCode"
         app:layout_constraintStart_toStartOf="@+id/tvCode"
         app:layout_constraintTop_toBottomOf="@+id/tvCode" />
-" />
+
+    <ImageButton
+        android:id="@+id/btnDelete"
+        android:layout_width="74dp"
+        android:layout_height="55dp"
+        android:layout_marginEnd="36dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="@+id/tvCode"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.437"
+        app:srcCompat="@android:drawable/ic_menu_delete" />
+
+    <TextView
+        android:id="@+id/textView24"
+        android:layout_width="230dp"
+        android:layout_height="57dp"
+        android:gravity="center"
+        android:text="名前："
+        android:textColor="@color/black"
+        android:textSize="40dp"
+        app:layout_constraintBottom_toBottomOf="@+id/tvName"
+        app:layout_constraintEnd_toStartOf="@+id/tvName"
+        app:layout_constraintTop_toTopOf="@+id/tvName" />
+
+    <TextView
+        android:id="@+id/textView26"
+        android:layout_width="230dp"
+        android:layout_height="57dp"
+        android:text="社員番号:"
+        android:textColor="@color/black"
+        android:gravity="center"
+        android:textSize="40dp"
+        app:layout_constraintBottom_toBottomOf="@+id/tvCode"
+        app:layout_constraintEnd_toStartOf="@+id/tvCode"
+        app:layout_constraintTop_toBottomOf="@+id/tvName" />
+
+    <TextView
+        android:id="@+id/textView27"
+        android:layout_width="230dp"
+        android:layout_height="57dp"
+        android:text="パスワード:"
+        android:gravity="center"
+        android:textColor="@color/black"
+        android:textSize="40dp"
+        app:layout_constraintBottom_toBottomOf="@+id/tvPass"
+        app:layout_constraintEnd_toStartOf="@+id/tvPass"
+        app:layout_constraintTop_toBottomOf="@+id/tvCode"
+        app:layout_constraintVertical_bias="1.0" />
+
+    <TextView
+        android:id="@+id/textView21"
+        android:layout_width="match_parent"
+        android:layout_height="5dp"
+        android:text=""
+        android:background="@color/white"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.488"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintVertical_bias="1.0"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
