--- a/PosApp/app/src/main/res/layout/fragment_login.xml
+++ b/PosApp/app/src/main/res/layout/fragment_login.xml
@@ -41,7 +41,8 @@
         android:ems="30"
         android:gravity="center"
         android:hint="社員コードをここに入れてください"
-        android:inputType="number"
+        android:inputType="textPassword|number"
+        android:password="true"
         android:textSize="30dp"
         app:layout_constraintEnd_toEndOf="@+id/textView20"
         app:layout_constraintStart_toStartOf="parent"
@@ -61,25 +62,25 @@
         app:layout_constraintStart_toStartOf="@+id/edtLoginCode"
         app:layout_constraintTop_toBottomOf="@+id/edtLoginCode" />
 
-<!--    <Button-->
-<!--        android:id="@+id/btnAd"-->
-<!--        android:layout_width="wrap_content"-->
-<!--        android:layout_height="wrap_content"-->
-<!--        android:layout_marginTop="24dp"-->
-<!--        android:text="Admin"-->
-<!--        app:layout_constraintEnd_toEndOf="@+id/btnLogin"-->
-<!--        app:layout_constraintStart_toStartOf="@+id/btnLogin"-->
-<!--        app:layout_constraintTop_toBottomOf="@+id/btnLogin" />-->
+    <Button
+        android:id="@+id/btnAd"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="24dp"
+        android:text="Admin"
+        app:layout_constraintEnd_toEndOf="@+id/btnLogin"
+        app:layout_constraintStart_toStartOf="@+id/btnLogin"
+        app:layout_constraintTop_toBottomOf="@+id/btnLogin" />
 
-<!--    <Button-->
-<!--        android:id="@+id/btnStaff"-->
-<!--        android:layout_width="wrap_content"-->
-<!--        android:layout_height="wrap_content"-->
-<!--        android:layout_marginTop="28dp"-->
-<!--        android:text="Staff"-->
-<!--        app:layout_constraintEnd_toEndOf="@+id/btnAd"-->
-<!--        app:layout_constraintHorizontal_bias="0.0"-->
-<!--        app:layout_constraintStart_toStartOf="@+id/btnAd"-->
-<!--        app:layout_constraintTop_toBottomOf="@+id/btnAd" />-->
+    <Button
+        android:id="@+id/btnStaff"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="28dp"
+        android:text="Staff"
+        app:layout_constraintEnd_toEndOf="@+id/btnAd"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="@+id/btnAd"
+        app:layout_constraintTop_toBottomOf="@+id/btnAd" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
