--- a/PosApp/app/src/main/res/layout/fragment_add_users.xml
+++ b/PosApp/app/src/main/res/layout/fragment_add_users.xml
@@ -36,9 +36,10 @@
         android:id="@+id/cbxAdmin"
         android:layout_width="291dp"
         android:layout_height="76dp"
-        android:layout_marginStart="320dp"
-        android:layout_marginTop="56dp"
+        android:layout_marginStart="164dp"
+        android:layout_marginTop="72dp"
         android:text="ADMIN"
+        android:textColor="@color/black"
         android:textSize="25dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -47,8 +48,9 @@
         android:id="@+id/cbxStaff"
         android:layout_width="291dp"
         android:layout_height="70dp"
-        android:layout_marginStart="320dp"
-        android:layout_marginTop="32dp"
+        android:layout_marginStart="164dp"
+        android:layout_marginTop="20dp"
+        android:textColor="@color/black"
         android:text="スタッフ"
         android:textSize="25dp"
         app:layout_constraintStart_toStartOf="parent"
@@ -58,15 +60,15 @@
         android:id="@+id/edtName"
         android:layout_width="918dp"
         android:layout_height="83dp"
-        android:layout_marginTop="60dp"
+        android:layout_marginTop="244dp"
         android:ems="10"
         android:hint="名前"
         android:inputType="textPersonName"
         android:textSize="30dp"
-        app:layout_constraintEnd_toEndOf="@+id/cbxStaff"
-        app:layout_constraintHorizontal_bias="0.248"
-        app:layout_constraintStart_toStartOf="@+id/cbxStaff"
-        app:layout_constraintTop_toBottomOf="@+id/cbxStaff" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.417"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <EditText
         android:id="@+id/edtEmployerCode"
@@ -91,9 +93,47 @@
         android:hint="パスワード"
         android:inputType="number"
         android:textSize="30dp"
+        android:password="true"
         app:layout_constraintEnd_toEndOf="@+id/edtEmployerCode"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="@+id/edtEmployerCode"
         app:layout_constraintTop_toBottomOf="@+id/edtEmployerCode" />
+
+    <EditText
+        android:id="@+id/edtNumberPhone"
+        android:layout_width="918dp"
+        android:layout_height="83dp"
+        android:layout_marginTop="144dp"
+        android:ems="10"
+        android:hint="電話番号"
+        android:inputType="phone"
+        android:textSize="30dp"
+        app:layout_constraintEnd_toEndOf="@+id/edtEmployerCode"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="@+id/edtEmployerCode"
+        app:layout_constraintTop_toBottomOf="@+id/edtEmployerCode" />
+
+    <DatePicker
+        android:id="@+id/datePicker"
+        android:layout_width="539dp"
+        android:layout_height="271dp"
+        android:layout_marginTop="4dp"
+        android:datePickerMode="spinner"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.946"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:id="@+id/textView34"
+        android:layout_width="200dp"
+        android:layout_height="76dp"
+        android:gravity="center"
+        android:text="生年月日:"
+        android:textSize="30dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/datePicker"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.131" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
