--- a/PosApp/app/src/main/res/layout/fragment_home.xml
+++ b/PosApp/app/src/main/res/layout/fragment_home.xml
@@ -29,27 +29,36 @@
                 android:layout_marginStart="5dp"
                 android:text="従業員管理" />
 
-        <Button
-            android:id="@+id/btnMenuManagement"
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
-            android:gravity="center"
-            android:textSize="30dp"
-            android:text="メニュー管理"
-            android:layout_marginStart="5dp" />
+            <Button
+                android:id="@+id/btnMenuManagement"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:gravity="center"
+                android:textSize="30dp"
+                android:text="メニュー管理"
+                android:layout_marginStart="5dp" />
 
-        <Button
-            android:id="@+id/btnNotificationManagement"
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:textSize="30dp"
-            android:layout_weight="1"
-            android:text="メモする"
-            android:layout_marginStart="5dp" />
+            <Button
+                android:id="@+id/btnShiftConfirmation"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_marginStart="5dp"
+                android:textSize="30dp"
+                android:layout_weight="1"
+                android:text="シフト確認" />
+
+            <Button
+                android:id="@+id/btnNotificationManagement"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:textSize="30dp"
+                android:layout_weight="1"
+                android:text="メモする"
+                android:layout_marginStart="5dp" />
 
 
-　　　   <Button
+            　　　   <Button
             android:id="@+id/btnLogOut"
             android:layout_width="0dp"
             android:layout_height="match_parent"
@@ -61,7 +70,7 @@
 
 
             <!--tạo layout cho phần hiển thị doanh thu, thời tiết, ca làm-->
-    </LinearLayout>
+        </LinearLayout>
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -78,33 +87,64 @@
                 <TextView
                     android:id="@+id/tvDate2"
                     android:layout_width="match_parent"
-                    android:layout_height="80dp"
+                    android:layout_height="60dp"
+                    android:background="#92ECE396"
                     android:gravity="center"
-                    android:textColor="@color/black"
                     android:text="本日の売り上げ"
+                    android:textColor="@color/black"
                     android:textSize="50dp"
                     app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintHorizontal_bias="0.0"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent" />
 
                 <TextView
+                    android:id="@+id/textView39"
+                    android:layout_width="match_parent"
+                    android:layout_height="60dp"
+                    android:layout_marginTop="8dp"
+                    android:background="#92ECE396"
+                    android:gravity="center"
+                    android:text="売れランキング"
+                    android:textColor="@color/black"
+                    android:textSize="50dp"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintHorizontal_bias="0.0"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/tvMonth" />
+
+                <TextView
                     android:id="@+id/textView"
                     android:layout_width="107dp"
-                    android:layout_height="97dp"
+                    android:layout_height="60dp"
                     android:layout_marginStart="16dp"
                     android:gravity="center"
                     android:text="日間:"
-                    android:textSize="40dp"
                     android:textColor="@color/black"
+                    android:textSize="40dp"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent"
-                    app:layout_constraintVertical_bias="0.19" />
+                    app:layout_constraintVertical_bias="0.129" />
+
+                <TextView
+                    android:id="@+id/textView40"
+                    android:layout_width="107dp"
+                    android:layout_height="60dp"
+                    android:layout_marginStart="16dp"
+                    android:gravity="center"
+                    android:text="1位:"
+                    android:textColor="@color/black"
+                    android:textSize="40dp"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/textView39"
+                    app:layout_constraintVertical_bias="0.148" />
 
                 <TextView
                     android:id="@+id/tvDay"
                     android:layout_width="270dp"
-                    android:layout_height="97dp"
+                    android:layout_height="60dp"
                     android:layout_marginStart="20dp"
                     android:text="500,000"
                     android:textSize="40dp"
@@ -116,27 +156,41 @@
                     app:layout_constraintVertical_bias="0.0" />
 
                 <TextView
+                    android:id="@+id/sold"
+                    android:layout_width="270dp"
+                    android:layout_height="60dp"
+                    android:layout_marginStart="16dp"
+                    android:gravity="center"
+                    android:text="500,000"
+                    android:textColor="@color/black"
+                    android:textSize="40dp"
+                    app:layout_constraintBottom_toBottomOf="@+id/textView40"
+                    app:layout_constraintStart_toEndOf="@+id/textView40"
+                    app:layout_constraintTop_toTopOf="@+id/textView40"
+                    app:layout_constraintVertical_bias="1.0" />
+
+                <TextView
                     android:id="@+id/textView8"
                     android:layout_width="107dp"
-                    android:layout_height="97dp"
-                    android:layout_marginTop="72dp"
-                    android:text="週間:"
-                    android:textSize="40dp"
-                    android:textColor="@color/black"
+                    android:layout_height="60dp"
+                    android:layout_marginTop="10dp"
                     android:gravity="center"
+                    android:text="週間:"
+                    android:textColor="@color/black"
+                    android:textSize="40dp"
                     app:layout_constraintEnd_toEndOf="@+id/textView"
-                    app:layout_constraintHorizontal_bias="0.496"
+                    app:layout_constraintHorizontal_bias="0.0"
                     app:layout_constraintStart_toStartOf="@+id/textView"
                     app:layout_constraintTop_toBottomOf="@+id/textView" />
 
                 <TextView
                     android:id="@+id/tvWeek"
                     android:layout_width="270dp"
-                    android:layout_height="97dp"
-                    android:layout_marginTop="72dp"
+                    android:layout_height="60dp"
+                    android:layout_marginTop="10dp"
+                    android:gravity="center"
                     android:text="150,000,000"
                     android:textColor="@color/black"
-                    android:gravity="center"
                     android:textSize="40dp"
                     app:layout_constraintEnd_toEndOf="@+id/tvDay"
                     app:layout_constraintHorizontal_bias="0.0"
@@ -146,28 +200,28 @@
                 <TextView
                     android:id="@+id/textView10"
                     android:layout_width="107dp"
-                    android:layout_height="97dp"
-                    android:layout_marginTop="72dp"
-                    android:text="月間:"
+                    android:layout_height="60dp"
+                    android:layout_marginTop="10dp"
                     android:gravity="center"
+                    android:text="月間:"
                     android:textColor="@color/black"
                     android:textSize="40dp"
                     app:layout_constraintEnd_toEndOf="@+id/textView8"
-                    app:layout_constraintHorizontal_bias="0.529"
+                    app:layout_constraintHorizontal_bias="0.0"
                     app:layout_constraintStart_toStartOf="@+id/textView8"
                     app:layout_constraintTop_toBottomOf="@+id/textView8" />
 
                 <TextView
                     android:id="@+id/tvMonth"
                     android:layout_width="270dp"
-                    android:layout_height="97dp"
-                    android:layout_marginTop="72dp"
-                    android:text="1,800,000,000"
-                    android:textSize="40dp"
-                    android:textColor="@color/black"
+                    android:layout_height="60dp"
+                    android:layout_marginTop="10dp"
                     android:gravity="center"
+                    android:text="1,800,000,000"
+                    android:textColor="@color/black"
+                    android:textSize="40dp"
                     app:layout_constraintEnd_toEndOf="@+id/tvWeek"
-                    app:layout_constraintHorizontal_bias="0.501"
+                    app:layout_constraintHorizontal_bias="0.0"
                     app:layout_constraintStart_toStartOf="@+id/tvWeek"
                     app:layout_constraintTop_toBottomOf="@+id/tvWeek" />
 
@@ -204,21 +258,12 @@
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/tvDate" />
 
-                <Button
-                    android:id="@+id/btnShiftConfirmation"
-                    android:layout_width="244dp"
-                    android:layout_height="85dp"
-                    android:layout_marginBottom="4dp"
-                    android:text="シフト確認"
-                    app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintHorizontal_bias="0.497"
-                    app:layout_constraintStart_toStartOf="parent" />
+
 
                 <androidx.recyclerview.widget.RecyclerView
-                    android:id="@+id/Shiftsrecycleview"
+                    android:id="@+id/shiftsRecycleView"
                     android:layout_width="425dp"
-                    android:layout_height="490dp"
+                    android:layout_height="560dp"
                     android:layout_marginTop="5dp"
                     app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                     app:layout_constraintEnd_toEndOf="parent"
@@ -235,6 +280,26 @@
                 android:background="@drawable/sales_bg"
                 android:orientation="vertical">
 
+                <ProgressBar
+                    android:id="@+id/loader"
+                    android:layout_width="423dp"
+                    android:layout_height="253dp"
+                    android:layout_centerInParent="true"
+                    android:layout_gravity="center"
+                    tools:ignore="MissingConstraints" />
+
+                <TextView
+                    android:id="@+id/errorText"
+                    android:layout_width="420dp"
+                    android:layout_height="710dp"
+                    android:layout_centerInParent="true"
+                    android:layout_gravity="center"
+                    android:gravity="center"
+                    android:textSize="40dp"
+                    android:text="インターネットに接続できません！"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    tools:ignore="MissingConstraints" />
 
                 <RelativeLayout
                     android:id="@+id/mainContainer"
@@ -264,7 +329,7 @@
                             android:textSize="50dp" />
 
                         <TextView
-                            android:id="@+id/updated_at"
+                            android:id="@+id/updatedAt"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:text="20 April 2012, 20:08 PM"
@@ -276,8 +341,10 @@
                     <LinearLayout
                         android:id="@+id/overviewContainer"
                         android:layout_width="match_parent"
-                        android:layout_height="430dp"
-                        android:layout_centerInParent="true"
+                        android:layout_height="420dp"
+                        android:layout_below="@+id/addressContainer"
+                        android:layout_centerHorizontal="true"
+                        android:layout_marginTop="5dp"
                         android:orientation="vertical">
 
                         <TextView
@@ -307,7 +374,7 @@
                             android:orientation="horizontal">
 
                             <TextView
-                                android:id="@+id/temp_min"
+                                android:id="@+id/tempMin"
                                 android:layout_width="wrap_content"
                                 android:layout_height="40dp"
                                 android:text="最低気温"
@@ -319,13 +386,16 @@
                                 android:layout_height="wrap_content" />
 
                             <TextView
-                                android:id="@+id/temp_max"
+                                android:id="@+id/tempMax"
                                 android:layout_width="wrap_content"
                                 android:layout_height="40dp"
                                 android:text="最高気温"
                                 android:textColor="@color/black"
                                 android:textSize="20dp" />
+
                         </LinearLayout>
+
+
 
                     </LinearLayout>
 
@@ -583,21 +653,8 @@
                         </LinearLayout>
                     </LinearLayout>
                 </RelativeLayout>
-
             </androidx.constraintlayout.widget.ConstraintLayout>
-
         </LinearLayout>
-        <ProgressBar android:id="@+id/loader"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_centerInParent="true"
-            android:visibility="gone"/>
-
-        <TextView android:id="@+id/errorText"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_centerInParent="true"
-            android:visibility="gone"
-            android:text="Something went wrong"/>
     </LinearLayout>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
