--- a/PosApp/app/src/main/res/layout/fragment_status.xml
+++ b/PosApp/app/src/main/res/layout/fragment_status.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
@@ -7,19 +8,23 @@
     android:background="@drawable/background_home"
     android:padding="20dp">
 
+
     <LinearLayout
+        android:id="@+id/linearLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal">
+        android:orientation="horizontal"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
 
         <TextView
             android:id="@+id/order_id"
             android:layout_width="100dp"
             android:layout_height="45dp"
-            android:text="番号"
-            android:gravity="center"
-            android:textColor="@color/black"
             android:background="#70FF9800"
+            android:gravity="center"
+            android:text="番号"
+            android:textColor="@color/black"
             android:textSize="16sp" />
 
         <TextView
@@ -28,9 +33,9 @@
             android:layout_height="45dp"
             android:layout_weight="1"
             android:background="#70FF9800"
+            android:gravity="center"
             android:text="注文日付"
             android:textColor="@color/black"
-            android:gravity="center"
             android:textSize="16sp" />
 
         <TextView
@@ -38,60 +43,82 @@
             android:layout_width="0dp"
             android:layout_height="45dp"
             android:layout_weight="1"
-            android:text="注文時間"
-            android:gravity="center"
-            android:textColor="@color/black"
             android:background="#70FF9800"
+            android:gravity="center"
+            android:text="注文時間"
+            android:textColor="@color/black"
             android:textSize="16sp" />
 
         <TextView
             android:layout_width="0dp"
             android:layout_height="45dp"
             android:layout_weight="1"
-            android:text="注文金額"
-            android:gravity="center"
-            android:textColor="@color/black"
             android:background="#70FF9800"
+            android:gravity="center"
+            android:text="注文金額"
+            android:textColor="@color/black"
             android:textSize="16sp" />
 
         <TextView
             android:id="@+id/order_status"
             android:layout_width="0dp"
-            android:gravity="center"
             android:layout_height="45dp"
             android:layout_weight="1"
             android:background="#70FF9800"
-            android:textColor="@color/black"
+            android:gravity="center"
             android:text="状況"
+            android:textColor="@color/black"
             android:textSize="16sp" />
     </LinearLayout>
 
+
     <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/constraintLayout"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="635dp"
+        android:layout_marginBottom="42dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.589"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/linearLayout">
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/recyclerviewStatus"
             android:layout_width="match_parent"
-            android:layout_height="650dp"
+            android:layout_height="350dp"
             app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.0" />
 
-        <Button
-            android:id="@+id/btnBack"
-            android:layout_width="200dp"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:text="戻る"
-            android:textSize="30dp"
+        <androidx.recyclerview.widget.RecyclerView
+            android:layout_width="1238dp"
+            android:layout_height="283dp"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="@+id/recyclerviewStatus"
+            app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/recyclerviewStatus" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
+    <Button
+        android:id="@+id/btnBack"
+        android:layout_width="200dp"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:layout_marginTop="6dp"
 
-</LinearLayout>
+        android:text="戻る"
+        android:textSize="30dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/constraintLayout"
+        app:layout_constraintVertical_bias="0.25" />
+
+
+</androidx.constraintlayout.widget.ConstraintLayout>
