--- a/PosApp/app/src/main/res/layout/recycleview_shifts.xml
+++ b/PosApp/app/src/main/res/layout/recycleview_shifts.xml
@@ -7,14 +7,14 @@
     android:background="#C3EADB"
     android:layout_height="180dp">
 
-    <TextView
+    <EditText
         android:id="@+id/tvName"
-        android:layout_width="1062dp"
+        android:layout_width="862dp"
         android:layout_height="57dp"
         android:layout_marginStart="216dp"
         android:text="Name"
         android:textColor="@color/black"
-        android:textSize="40dp"
+        android:textSize="30dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -30,14 +30,14 @@
         app:layout_constraintEnd_toStartOf="@+id/tvName"
         app:layout_constraintTop_toTopOf="@+id/tvName" />
 
-    <TextView
-        android:id="@+id/tvTime"
-        android:layout_width="1062dp"
+    <EditText
+        android:id="@+id/tvDate"
+        android:layout_width="862dp"
         android:layout_height="57dp"
         android:layout_marginStart="216dp"
-        android:text="Time"
+        android:text="Date"
         android:textColor="@color/black"
-        android:textSize="40dp"
+        android:textSize="30dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tvName" />
 
@@ -45,46 +45,59 @@
         android:id="@+id/textView26"
         android:layout_width="230dp"
         android:layout_height="57dp"
-        android:text="時間帯:"
-        android:textColor="@color/black"
         android:gravity="center"
+        android:text="日付:"
+        android:textColor="@color/black"
         android:textSize="40dp"
         app:layout_constraintBottom_toBottomOf="@+id/tvTime"
         app:layout_constraintEnd_toStartOf="@+id/tvTime"
-        app:layout_constraintTop_toBottomOf="@+id/tvName" />
+        app:layout_constraintTop_toBottomOf="@+id/tvName"
+        app:layout_constraintVertical_bias="0.087" />
 
-    <TextView
-        android:id="@+id/tvDate"
-        android:layout_width="1062dp"
+    <EditText
+        android:id="@+id/tvTime"
+        android:layout_width="862dp"
         android:layout_height="57dp"
         android:layout_marginStart="216dp"
-        android:text="Date"
+        android:text="Time"
         android:textColor="@color/black"
-        android:textSize="40dp"
+        android:textSize="30dp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tvTime" />
+        app:layout_constraintTop_toBottomOf="@+id/tvDate" />
 
     <TextView
         android:layout_width="230dp"
         android:layout_height="57dp"
         android:gravity="center"
-        android:text="日付:"
+        android:text="時間帯:"
         android:textColor="@color/black"
         android:textSize="40dp"
-        app:layout_constraintBottom_toBottomOf="@+id/tvDate"
+        app:layout_constraintBottom_toTopOf="@+id/textView21"
         app:layout_constraintEnd_toStartOf="@+id/tvDate"
-        app:layout_constraintTop_toBottomOf="@+id/tvTime" />
+        app:layout_constraintTop_toBottomOf="@+id/tvDate" />
 
     <ImageButton
         android:id="@+id/btnDelete"
-        android:layout_width="68dp"
-        android:layout_height="62dp"
-        android:layout_marginEnd="52dp"
+        android:layout_width="74dp"
+        android:layout_height="55dp"
+        android:layout_marginEnd="8dp"
         android:onClick="onDeleteButtonClicked"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.24"
         app:srcCompat="@android:drawable/ic_menu_delete" />
+
+    <ImageButton
+        android:id="@+id/btnUpdate"
+        android:layout_width="74dp"
+        android:layout_height="55dp"
+        android:layout_marginEnd="8dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.776"
+        app:srcCompat="@android:drawable/ic_popup_sync" />
 
     <TextView
         android:id="@+id/textView21"
