--- a/PosApp/app/src/main/res/layout/recycleview_shifts_home.xml
+++ b/PosApp/app/src/main/res/layout/recycleview_shifts_home.xml
@@ -31,7 +31,7 @@
         app:layout_constraintVertical_bias="0.0" />
 
     <TextView
-        android:id="@+id/tvTime"
+        android:id="@+id/tvTimeHome"
         android:layout_width="580dp"
         android:layout_height="45dp"
         android:text="Time"
@@ -48,19 +48,19 @@
         android:text="日付:"
         android:textColor="@color/black"
         android:textSize="30dp"
-        app:layout_constraintBottom_toBottomOf="@+id/tvTime"
+        app:layout_constraintBottom_toBottomOf="@+id/tvTimeHome"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tvName" />
 
     <TextView
-        android:id="@+id/tvDate"
+        android:id="@+id/tvDateHome"
         android:layout_width="580dp"
         android:layout_height="45dp"
         android:text="Date"
         android:textColor="@color/black"
         android:textSize="30dp"
         app:layout_constraintStart_toEndOf="@+id/textView29"
-        app:layout_constraintTop_toBottomOf="@+id/tvTime" />
+        app:layout_constraintTop_toBottomOf="@+id/tvTimeHome" />
 
     <TextView
         android:id="@+id/textView29"
@@ -72,7 +72,7 @@
         android:textSize="30dp"
         app:layout_constraintBottom_toBottomOf="@+id/tvDate"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tvTime" />
+        app:layout_constraintTop_toBottomOf="@+id/tvTimeHome" />
 
     <TextView
         android:id="@+id/textView21"
