--- a/PosApp/app/src/main/res/layout/recycleview_users.xml
+++ b/PosApp/app/src/main/res/layout/recycleview_users.xml
@@ -7,50 +7,96 @@
     android:layout_height="180dp"
     android:background="#C3EADB">
 
-    <TextView
+    <EditText
         android:id="@+id/tvName"
-        android:layout_width="1062dp"
+        android:layout_width="362dp"
         android:layout_height="57dp"
-        android:layout_marginStart="220dp"
         android:text="Name"
-        android:textSize="40dp"
         android:textColor="@color/black"
-        app:layout_constraintStart_toStartOf="parent"
+        android:textSize="30dp"
+        app:layout_constraintStart_toEndOf="@+id/textView24"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <EditText
+        android:id="@+id/tvPhone"
+        android:layout_width="362dp"
+        android:layout_height="57dp"
+        android:text="電話番号"
+        android:textColor="@color/black"
+        android:textSize="30dp"
+        app:layout_constraintStart_toEndOf="@+id/textView36"
+        app:layout_constraintTop_toBottomOf="@+id/tvName" />
+
+    <Button
+        android:id="@+id/btnPass"
+        android:layout_width="230dp"
+        android:layout_height="57dp"
+        android:gravity="center"
+        android:text="パスワード:"
+        android:textColor="@color/black"
+        android:textSize="30dp"
+        app:layout_constraintEnd_toEndOf="@+id/textView36"
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintStart_toStartOf="@+id/textView36"
+        app:layout_constraintTop_toBottomOf="@+id/textView36" />
+
+    <EditText
+        android:id="@+id/tvPass"
+        android:layout_width="361dp"
+        android:layout_height="57dp"
+        android:text="pass"
+        android:textColor="@color/black"
+        android:textSize="30dp"
+        app:layout_constraintBottom_toBottomOf="@+id/btnPass"
+        app:layout_constraintStart_toEndOf="@+id/btnPass"
+        app:layout_constraintTop_toTopOf="@+id/btnPass"
+        app:layout_constraintVertical_bias="1.0" />
+
+    <TextView
+        android:id="@+id/tvBirth"
+        android:layout_width="361dp"
+        android:layout_height="57dp"
+        android:layout_marginEnd="92dp"
+        android:text="生年月日"
+        android:textColor="@color/black"
+        android:textSize="30dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/tvRole"
+        app:layout_constraintVertical_bias="0.0" />
 
     <TextView
         android:id="@+id/tvCode"
-        android:layout_width="1062dp"
+        android:layout_width="362dp"
         android:layout_height="57dp"
-        android:layout_marginTop="0dp"
+        android:layout_marginEnd="92dp"
         android:text="Code"
-        android:textSize="40dp"
         android:textColor="@color/black"
-        app:layout_constraintEnd_toEndOf="@+id/tvName"
-        app:layout_constraintHorizontal_bias="1.0"
-        app:layout_constraintStart_toStartOf="@+id/tvName"
-        app:layout_constraintTop_toBottomOf="@+id/tvName" />
+        android:textSize="30dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
-        android:id="@+id/tvPass"
-        android:layout_width="1062dp"
+        android:id="@+id/tvRole"
+        android:layout_width="362dp"
         android:layout_height="57dp"
-        android:text="Pass"
-        android:textSize="40dp"
+        android:text="権限"
         android:textColor="@color/black"
+        android:textSize="30dp"
         app:layout_constraintEnd_toEndOf="@+id/tvCode"
-        app:layout_constraintStart_toStartOf="@+id/tvCode"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toEndOf="@+id/textView27"
         app:layout_constraintTop_toBottomOf="@+id/tvCode" />
 
     <ImageButton
         android:id="@+id/btnDelete"
         android:layout_width="74dp"
         android:layout_height="55dp"
-        android:layout_marginEnd="36dp"
+        android:layout_marginEnd="12dp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="@+id/tvCode"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.437"
+        app:layout_constraintVertical_bias="0.063"
         app:srcCompat="@android:drawable/ic_menu_delete" />
 
     <TextView
@@ -60,33 +106,55 @@
         android:gravity="center"
         android:text="名前："
         android:textColor="@color/black"
-        android:textSize="40dp"
-        app:layout_constraintBottom_toBottomOf="@+id/tvName"
-        app:layout_constraintEnd_toStartOf="@+id/tvName"
+        android:textSize="30dp"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/tvName" />
 
     <TextView
         android:id="@+id/textView26"
         android:layout_width="230dp"
         android:layout_height="57dp"
+        android:gravity="right"
         android:text="社員番号:"
         android:textColor="@color/black"
-        android:gravity="center"
-        android:textSize="40dp"
+        android:textSize="30dp"
         app:layout_constraintBottom_toBottomOf="@+id/tvCode"
-        app:layout_constraintEnd_toStartOf="@+id/tvCode"
-        app:layout_constraintTop_toBottomOf="@+id/tvName" />
+        app:layout_constraintEnd_toStartOf="@+id/tvCode" />
+
+    <TextView
+        android:id="@+id/textView36"
+        android:layout_width="230dp"
+        android:layout_height="57dp"
+        android:gravity="center"
+        android:text="電話番号:"
+        android:textColor="@color/black"
+        android:textSize="30dp"
+        app:layout_constraintEnd_toStartOf="@+id/tvName"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="@+id/textView24"
+        app:layout_constraintTop_toBottomOf="@+id/textView24" />
+
+    <TextView
+        android:id="@+id/textView37"
+        android:layout_width="230dp"
+        android:layout_height="57dp"
+        android:gravity="right"
+        android:text="生年月日:"
+        android:textColor="@color/black"
+        android:textSize="30dp"
+        app:layout_constraintEnd_toStartOf="@+id/tvBirth"
+        app:layout_constraintTop_toBottomOf="@+id/textView27" />
 
     <TextView
         android:id="@+id/textView27"
         android:layout_width="230dp"
         android:layout_height="57dp"
-        android:text="パスワード:"
-        android:gravity="center"
+        android:text="権限:"
+        android:gravity="right"
         android:textColor="@color/black"
-        android:textSize="40dp"
-        app:layout_constraintBottom_toBottomOf="@+id/tvPass"
-        app:layout_constraintEnd_toStartOf="@+id/tvPass"
+        android:textSize="30dp"
+        app:layout_constraintBottom_toBottomOf="@+id/tvRole"
+        app:layout_constraintEnd_toStartOf="@+id/tvCode"
         app:layout_constraintTop_toBottomOf="@+id/tvCode"
         app:layout_constraintVertical_bias="1.0" />
 
@@ -94,12 +162,22 @@
         android:id="@+id/textView21"
         android:layout_width="match_parent"
         android:layout_height="5dp"
-        android:text=""
         android:background="@color/white"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.488"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintVertical_bias="1.0"/>
+
+    <ImageButton
+        android:id="@+id/btnUpdate"
+        android:layout_width="72dp"
+        android:layout_height="55dp"
+        android:layout_marginEnd="12dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.504"
+        app:srcCompat="@android:drawable/ic_popup_sync" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
